--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-navigation/bottom-tabs": "^6.5.6",
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-redux": "^8.0.5",
     "twrnc": "^3.6.0"
   },
   "devDependencies": {
